change surefire plugin maven command line for tests